# thermik_challenge

./: CMakeLists.txt  ausschreibung.md
igc/: 95iv6hr2.igc
include/: airports.hpp  parser.hpp  thermal.hpp
include/algorithm/: floating_average.hpp
include/units/: gps.hpp
src/units/: gps.cpp
